# AIObservabilityArgus

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  RUNBOOK.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
apps/ingest/: Dockerfile  package.json  railway.json  tsconfig.json
apps/ingest/src/: auth.ts  server.ts
apps/web/: Dockerfile  package.json  railway.json
apps/web/demo/: index.html
apps/web/public/: app.css  app.js  glossary.js  index.html  login.html  login.js  onboard.html  onboard.js  reset.html  reset.js
apps/web/src/: admin.ts  audit.ts  auth.ts  db.ts  email.ts  ids.ts  onboarding.ts  queries.ts  server.ts  (+1 more)
apps/worker/: Dockerfile  package.json  railway.json
demo/: send_poisoned_trace.py
deploy/: docker-compose.prod.yml  docker-compose.yml
docs/: 01-vision-and-scope.md  02-architecture.md  03-tech-stack.md  04-security-detection-engine.md  05-data-model.md  06-roadmap.md  07-references.md  08-ui-design-spec.md  09-deployment.md  10-integration-example-nodejs.md
scripts/: migrate.mjs
services/detection/: Dockerfile  pyproject.toml  railway.json
services/detection/argus_detection/: __init__.py  app.py  models.py  pipeline.py  scoring.py  serve.py  taint.py
services/detection/argus_detection/corpus/: span_corpus.jsonl
services/detection/argus_detection/layers/: classifiers.py  heuristics.py  trace_analysis.py
services/detection/argus_detection/rules/: default-v1.yaml
services/detection/tests/: test_heuristics.py  test_quality_gate.py  test_trace_analysis.py
(+23 files in other folders)
